--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "chart.js": "^4.3.0"
   }
 }
