--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.10.5",
     "chart.js": "^4.3.0"
   }
 }
